Update Authors list

--- a/igal2.1
+++ b/igal2.1
@@ -317,8 +317,12 @@ There are always some.  If you find any let me know.
 I don't have much time to keep tweaking
 .B igal2
 but if any major bugs pop up I probably ought to fix them.
-.SH AUTHOR
-Eric Pop <epop@stanford.edu>, Wolfgang Trexler <wt-igal@trexler.at>
+.SH AUTHORS
+Eric Pop <epop@stanford.edu>
+.br
+Wolfgang Trexler <wt-igal@trexler.at>
+.br
+Johnny A. Solbu <johnny@solbu.net>
 .SH "SEE ALSO"
 .BR cjpeg ", " djpeg ", " pnmscale ", " identify ", " convert ". "
 If they didn't come standard with your Linux distribution
