--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-11-23  Johnny A. Solbu <johnny@solbu.net>
+
+	* Version 2.3
+
 2019-11-15  Johnny A. Solbu <johnny@solbu.net>
 
 	* Generate mobile-friendly html-pages
