--- a/README
+++ b/README
@@ -10,9 +10,13 @@ These come standard with most Linux distributions today.
 To install from the tarball (as root)
     make install
 
-This will put the relevant files in /usr/local/{bin or lib}/igal2 .  
-You can change this destination by modifying the DESTDIR at the top of
- the Makefile and the LIBDIR variable at the 8th line of iGal code.
+By default, this will put the relevant files in «/usr/local».
+(e.g. «/usr/local/bin» and «/usr/local/share/igal2»)
+You can change this destination by using «PREFIX=/<some/path/here>»
+in the make install argument.
+
+To install this in /usr (/usr/bin and /usr/share/igal2)
+run «make PREFIX=/usr».
 
 To uninstall from the tarball (as root)
     make clean
