--- a/README
+++ b/README
@@ -16,7 +16,7 @@ You can change this destination by using «PREFIX=/<some/path/here>»
 in the make install argument.
 
 To install this in /usr (/usr/bin and /usr/share/igal2)
-run «make PREFIX=/usr».
+run «make PREFIX=/usr install».
 
 To uninstall from the tarball (as root)
     make clean
