--- a/README
+++ b/README
@@ -41,9 +41,9 @@ This can be done with
 ------------------------------------------------------------------------
 
 Copyright:
-2000: Eric Pop <epop@stanford.edu>, 
-2016: Wolfgang Trexler <wt-igal@trexler.at>,
-2019: Johnny A. Solbu <johnny@solbu.net>
+2000:      Eric Pop <epop@stanford.edu>, 
+2016:      Wolfgang Trexler <wt-igal@trexler.at>,
+2019-2020: Johnny A. Solbu <johnny@solbu.net>
 
 igal2 is distributed under the terms of the GNU General Public License 
 as published by the Free Software Foundation; either version 2 of the
