--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2021-11-18  Johnny A. Solbu <johnny@solbu.net>
+
+	* Version 3.0
+	* Add support for html5 video
+
 2020-10-11  Johnny A. Solbu <johnny@solbu.net>
 
 	* Version 2.4
