--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2024-06-29  Johnny A. Solbu <johnny@solbu.net>
+
+	* Added support to specify directory for templates.
+
 2021-11-18  Johnny A. Solbu <johnny@solbu.net>
 
 	* Version 3.0
