--- a/igal2.1
+++ b/igal2.1
@@ -1,7 +1,7 @@
 .\" Process this file with
 .\" groff -man -Tascii foo.1
 .\"
-.TH igal2 1 "November 2021" "Version 3.0" "Version 3.0"
+.TH igal2 1 "June 2024" "Version 3.2" "Version 3.2"
 
 .SH NAME
 igal2 \- online Image GALlery generator
@@ -265,6 +265,10 @@ index.html file.
 
 Note: igal2 will not work recursively, it just adds HREF links to the 
 found directories.
+.TP
+.BI --igaldir
+Use custom templates from this directory
+.RI ( $HOME/.igal2 )
 
 .SH FILES
 .I /usr/local/share/igal2/indextemplate2.html
